change in first card
style of card title and content
style of card label

--- a/img_Gallery/html/gallery.html
+++ b/img_Gallery/html/gallery.html
@@ -11,18 +11,18 @@
 
 <body>
 	<div class="container">
-		<div class="card container__card--normal">
+		<div class="container__card container__card--normal toledo">
 			<img src="../image/bg-3.png" alt="card image" class="card__img--spain">
-			<p class="card__title--spain">Toledo, Spain</p>
-			<p class="card__content--spain">Also known as The Imperial City.</p>
+			<p class="card__title">Toledo, Spain</p>
+			<p class="card__content">Also known as The Imperial City.</p>
 			<div class="card__label--spain">SPAIN</div>
 			<img src="../icon/icon-heart.svg" alt="heart icon" class="card__heart--spain">
 		</div>
-		<div class="card container__card--normal"></div>
-		<div class="card container__card--normal"></div>
-		<div class="card container__card--normal"></div>
-		<div class="card container__card--normal"></div>
-		<div class="card container__card--high">
+		<div class="container__card container__card--normal"></div>
+		<div class="container__card container__card--normal"></div>
+		<div class="container__card container__card--normal"></div>
+		<div class="container__card container__card--normal"></div>
+		<div class="container__card container__card--high">
 			<img src="../image/bg-3.png" alt="card image" class="card_img--venice">
 			<p class="card__title--venice">Venice Islands</p>
 			<p class="card__content--venice">
@@ -39,7 +39,7 @@
 			<div class="card__label--italy">ITALY</div>
 			<div class="viewMoreButton">View more</div>
 		</div>
-		<div class="card container__card--normal"></div>
+		<div class="container__card container__card--normal"></div>
 	</div>
 </body>
 
