style of the second card
style the img
label of Italy
add view more button
transparent effect of card content

--- a/img_Gallery/html/gallery.html
+++ b/img_Gallery/html/gallery.html
@@ -16,16 +16,15 @@
 			<p class="card__title">Toledo, Spain</p>
 			<p class="card__content">Also known as The Imperial City.</p>
 			<div class="card__label--spain">SPAIN</div>
-			<img src="../icon/icon-heart.svg" alt="heart icon" class="card__heart--spain">
 		</div>
 		<div class="container__card container__card--normal"></div>
 		<div class="container__card container__card--normal"></div>
 		<div class="container__card container__card--normal"></div>
 		<div class="container__card container__card--normal"></div>
-		<div class="container__card container__card--high">
+		<div class="container__card container__card--high venice">
 			<img src="../image/bg-3.png" alt="card image" class="card_img--venice">
-			<p class="card__title--venice">Venice Islands</p>
-			<p class="card__content--venice">
+			<p class="card__title">Venice Islands</p>
+			<p class="card__content">
 				Venice is a city in the northestern Italy and the capital of
 				the Veneto region. It is situated across a group of 18 small
 				islands that Lorem ipsum dolor, sit amet consectetur adipisicing elit.
