edit of the third card
add card title
add card content
add card label

--- a/img_Gallery/html/gallery.html
+++ b/img_Gallery/html/gallery.html
@@ -17,7 +17,11 @@
 			<p class="card__content">Also known as The Imperial City.</p>
 			<div class="card__label--spain">SPAIN</div>
 		</div>
-		<div class="container__card container__card--normal"></div>
+		<div class="container__card container__card--normal boboli">
+			<p class="card__title">Boboli Gardens</p>
+			<p class="card__content">Florence, Italy</p>
+			<div class="card__label--italy">ITALY</div>
+		</div>
 		<div class="container__card container__card--normal"></div>
 		<div class="container__card container__card--normal"></div>
 		<div class="container__card container__card--normal"></div>
