--- a/img_Gallery/html/gallery.html
+++ b/img_Gallery/html/gallery.html
@@ -42,7 +42,13 @@
 			<div class="card__label--italy">ITALY</div>
 			<div class="viewMoreButton">View more</div>
 		</div>
-		<div class="container__card container__card--normal"></div>
+		<div class="container__card container__card--high container__card--wide"></div>
+		<div class="container--high container__card--high"></div>
+		<div class="container--high container__card--high"></div>
+		<div class="container__card container__card--high"></div>
+		<div class="container__card container__card--high"></div>
+		<div class="container__card container__card--high"></div>
+		<div class="container__card container__card--high container__card--wide"></div>
 	</div>
 </body>
 
