layout of the image gallery

--- a/img_Gallery/html/gallery.html
+++ b/img_Gallery/html/gallery.html
@@ -43,8 +43,16 @@
 			<div class="viewMoreButton">View more</div>
 		</div>
 		<div class="container__card container__card--high container__card--wide"></div>
-		<div class="container--high container__card--high"></div>
-		<div class="container--high container__card--high"></div>
+		<div class="container--high container__card--high">
+			<div class="container__card container__card--small"></div>
+			<div class="container__card container__card--small"></div>
+			<div class="container__card container__card--normal"></div>
+		</div>
+		<div class="container--high container__card--high">
+			<div class="container__card container__card--small"></div>
+			<div class="container__card container__card--small"></div>
+			<div class="container__card container__card--normal"></div>
+		</div>
 		<div class="container__card container__card--high"></div>
 		<div class="container__card container__card--high"></div>
 		<div class="container__card container__card--high"></div>
